src/main/resources/web/resources/css/style.css
  /**
  	*  Ad hoc Modifications to Bootstrap 
    * 
    *  Author: Patrice Lopez        
  	*/

.label {
    padding: 1px 3px 2px;
    font-size: 13px;
    font-weight: bold;
    color: #ffffff;
    /*text-transform: uppercase;*/
    white-space: nowrap;
    background-color: #87A1A8;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
}
.label.TEMPERATURE {
    background-color: #398739;
}
.label.MASS {
    background-color: #c43c35;
}
.label.TIME {
    background-color: #f89406;
}
.label.LENGTH {
    background-color: #01A9DB;
}
.label.FREQUENCY {
    background-color: #8904B1;
}
.label.FRACTION {
    background-color: #c43c35;
}
.label.VOLUME {
    background-color: #c43c35;
}
.label.VELOCITY {
    background-color: #c43c35;
}
.label.AREA {
    background-color: #87A1A8;
}
.label.CONCENTRATION {
    background-color: #31B404;
}
.label.MASS_ACCUMULATION_RATE {
    background-color: #21F434;
}
.label.SEDIMENTATION_RATE {
    background-color: #48E122;
}

.label.biology {
    background-color: #398739;
}
.label.chemistry {
    background-color: #c43c35;
}
.label.food {
    background-color: #398739;
}
.label.medicine {
    background-color: #f89406;
}
.label.anatomy {
    background-color: #f89406;
}
.label.engineering {
    background-color: #01A9DB;
}
.label.animals {
    background-color: #8904B1;
}
.label.plants {
    background-color: #c43c35;
}
.label.earth {
    background-color: #c43c35;
}
.label.mathematics {
    background-color: #c43c35;
}
.label.physics {
    background-color: #87A1A8;
}
.label.architecture {
    background-color: #A901DB;
}
.label.astronautics {
    background-color: #87A1A8;
}
.label.telecommunication {
    background-color: #5C460C;
}
.label.computer_science {
    background-color: #04B4AE;
}
.label.environment {
    background-color: #31B404;
}

html, body {
  background-color: #D8D8D8;
  color:#70695C; 
  word-break:normal;
}
body {
  padding-top: 20px; /* 40px to make the container go all the way to the bottom of the topbar */
  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
  color:#70695C; 
}

.content {
  background-color: #fff;
  padding: 20px;
  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
  -webkit-border-radius: 0 0 6px 6px;
     -moz-border-radius: 0 0 6px 6px;
          border-radius: 0 0 6px 6px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
          box-shadow: 0 1px 2px rgba(0,0,0,.15);
  font-family: "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
  word-break:normal;
}

.page-header {
  background-color: #f5f5f5;
  padding: 20px 20px 10px;
  margin: -20px -20px 20px;
}

.container > footer p {
  text-align: center;
}

/* specific additions for the example index page */
.nav-logo img {
  margin-top: 4px;
}

h4 {
  line-height: 28px;
  margin-bottom: 10px;
}

/*  For Code Snippets
        ============================================ */
        
code, pre, pre.prettyprint {
    background-color: #fee9cc;
}
pre, pre.prettyprint {
    padding: 16px 20px;
    margin: 10px 0;
    -webkit-border-radius: 6px; 
    -moz-border-radius: 6px;
    border-radius: 6px;
    max-width: 100%;
}

.alert pre {
    text-shadow: none;
}

/* Pretty printing styles. Used with prettify.js. */

/* SPAN elements with the classes below are added by prettyprint. */
.pln { color: #000 }  /* plain text */

@media screen {
  .str { color: #080 }  /* string content */
  .kwd { color: #008 }  /* a keyword */
  .com { color: #800 }  /* a comment */
  .typ { color: #606 }  /* a type name */
  .lit { color: #066 }  /* a literal value */
  /* punctuation, lisp open bracket, lisp close bracket */
  .pun, .opn, .clo { color: #660 }
  .tag { color: #008 }  /* a markup tag name */
  .atn { color: #606 }  /* a markup attribute name */
  .atv { color: #080 }  /* a markup attribute value */
  .dec, .var { color: #606 }  /* a declaration; a variable name */
  .fun { color: red }  /* a function name */
}

/* Use higher contrast and text-weight for printable form. */
@media print, projection {
  .str { color: #060 }
  .kwd { color: #006; font-weight: bold }
  .com { color: #600; font-style: italic }
  .typ { color: #404; font-weight: bold }
  .lit { color: #044 }
  .pun, .opn, .clo { color: #440 }
  .tag { color: #006; font-weight: bold }
  .atn { color: #404 }
  .atv { color: #060 }
}

a:focus{outline:thin dotted #BC0E0E;outline:5px auto -webkit-focus-ring-color;outline-offset:-2px;}
a:hover,a:active{outline:0;color:#BC0E0E;}
a{color:#70695C;text-decoration:none;}                
a:hover{color:#BC0E0E;text-decoration:underline;}

h3{ color:#70695C; }

a.section-not-active { color: #70695C; }
a.section-active { color: #BC0E0E; }
span.section-not-active { color: #70695C; }
span.section-active { color: #BC0E0E; }

/*.table th{background-color:#FCF8E3;} */
.table {background-color:#fff;border:0px solid #ddd;}
.table th {background-color:#fff;} 
.table tr {background-color:#fff;border:0px solid #ddd;}
.table td {background-color:#fff;border:0px;font-size:14;}
/*.table tr{background-color:#FCF8E3;} */
.table tbody tr.highlight td { background-color: #F2DEDE; word-break:normal; }
  
p {word-break:normal;}
span {word-break:normal;}

[rel=popover][data-color=TEMPERATURE] + .popover .popover-title {
    background-color: #398739; color: white;
}

[rel=popover][data-color=person] + .popover .popover-title {
    background-color: #c43c35; color: white;
}

[rel=popover][data-color=period] + .popover .popover-title {
    background-color: #f89406; color: white;
}

[rel=popover][data-color=event] + .popover .popover-title {
    background-color: #01A9DB; color: white;
}

[rel=popover][data-color=national] + .popover .popover-title {
    background-color: #8904B1; color: white;
}

[rel=popover][data-color=measure] + .popover .popover-title {
    background-color: #c43c35; color: white;
}

[rel=popover][data-color=acronym] + .popover .popover-title {
    background-color: #c43c35; color: white;
}

[rel=popover][data-color=institution] + .popover .popover-title {
    background-color: #c43c35; color: white;
}

[rel=popover][data-color=sense] + .popover .popover-title {
    background-color: #87A1A8; color: white;
}

.info-sense-box,.details-list {
	margin:1px 1;padding:5px 2px 3px 2px;border:1px solid #87A1A8;background-color:#87A1A8;border-radius:5px;
	font-size:13px;
}

/* NER */
.info-sense-box.TEMPERATURE {
    background-color: #398739;
}
.info-sense-box.MASS {
    background-color: #c43c35;
}
.info-sense-box.TIME {
    background-color: #f89406;
}
.info-sense-box.LENGTH {
    background-color: #01A9DB;
}
.info-sense-box.FREQUENCY {
    background-color: #8904B1;
}
.info-sense-box.FRACTION {
    background-color: #c43c35;
}
.info-sense-box.VOLUME {
    background-color: #c43c35;
}
.info-sense-box.VELOCITY {
    background-color: #c43c35;
}
.info-sense-box.AREA {
    background-color: #87A1A8;
}
.info-sense-box.CONCENTRATION {
    background-color: #31B404;
}
.info-sense-box.MASS_ACCUMULATION_RATE {
    background-color: #21F434;
}
.info-sense-box.SEDIMENTATION_RATE {
    background-color: #48E122;
}

/* DOMAINS */
.info-sense-box.biology {
    background-color: #398739;
}
.info-sense-box.chemistry {
    background-color: #c43c35;
}
.info-sense-box.food {
    background-color: #398739;
}
.info-sense-box.medicine {
    background-color: #f89406;
}
.info-sense-box.anatomy {
    background-color: #f89406;
}
.info-sense-box.engineering {
    background-color: #01A9DB;
}
.info-sense-box.animals {
    background-color: #8904B1;
}
.info-sense-box.plants {
    background-color: #c43c35;
}
.info-sense-box.earth {
    background-color: #c43c35;
}
.info-sense-box.mathematics {
    background-color: #c43c35;
}
.info-sense-box.physics {
    background-color: #87A1A8;
}
.info-sense-box.optics {
    background-color: #87A1A8;
}
.info-sense-box.architecture {
    background-color: #A901DB;
}
.info-sense-box.astronautics {
    background-color: #87A1A8;
}
.info-sense-box.telecommunication {
    background-color: #5C460C;
}
.info-sense-box.computer_science {
    background-color: #04B4AE;
}
.info-sense-box.environment {
    background-color: #31B404;
}
.info-sense-box.electronics {
    background-color: #01A9DB;
}
.info-sense-box.mass_accumulation_rate {
    background-color: #21F434;
}
.info-sense-box.sedimentation_rate {
    background-color: #48E122;
}


// links for box PDF annotations
a.TEMPERATURE {
    border-color: #398739;
}
a.MASS {
    border-color: #c43c35;
}
a.TIME {
    border-color: #f89406;
}
a.LENGTH {
    border-color: #01A9DB;
}
a.FREQUENCY {
    border-color: #8904B1;
}
a.FRACTION {
    border-color: #c43c35;
}
a.VOLUME {
    border-color: #c43c35;
}
a.VELOCITY {
    border-color: #c43c35;
}
a.AREA {
    border-color: #87A1A8;
}
a.CONCENTRATION {
    border-color: #31B404;
}
a.MASS_ACCUMULATION_RATE {
    border-color: #21F434;
}
a.SEDIMENTATION_RATE {
    border-color: #48E122;
}

